TDM-28 refactor itemService