@@ -8,45 +8,45 @@ import com.persoff68.fatodo.service.exception.PermissionException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
 import java.util.Set;
 
 @Service
 @RequiredArgsConstructor
-public class GroupPermissionService {
+public class PermissionService {
 
     private final JwtTokenProvider jwtTokenProvider;
     private final GroupServiceClient groupServiceClient;
 
-    public void checkReadPermission(Set<String> groupIds) {
+    public void checkRead(String groupId) {
+        checkRead(Set.of(groupId));
+    }
+
+    public void checkRead(Set<String> groupIds) {
         if (!canRead(groupIds)) {
             throw new PermissionException();
         }
     }
 
-    public void checkReadPermission(String groupId) {
-        checkReadPermission(Collections.singleton(groupId));
+    public void checkEdit(String groupId) {
+        checkEdit(Set.of(groupId));
     }
 
-    public void checkEditPermission(Set<String> groupIds) {
+    public void checkEdit(Set<String> groupIds) {
         if (!canEdit(groupIds)) {
             throw new PermissionException();
         }
     }
 
-    public void checkEditPermission(String groupId) {
-        checkEditPermission(Collections.singleton(groupId));
+    public void checkAdmin(String groupId) {
+        checkAdmin(Set.of(groupId));
     }
 
-    public void checkAdminPermission(Set<String> groupIds) {
+    public void checkAdmin(Set<String> groupIds) {
         if (!canAdmin(groupIds)) {
             throw new PermissionException();
         }
     }
 
-    public void checkAdminPermission(String groupId) {
-        checkAdminPermission(Collections.singleton(groupId));
-    }
 
     private boolean canRead(Set<String> groupIds) {
         GroupPermissionDTO dto = new GroupPermissionDTO(groupIds, getUserId());
@@ -60,8 +60,9 @@ public class GroupPermissionService {
 
     private boolean canAdmin(Set<String> groupIds) {
         GroupPermissionDTO dto = new GroupPermissionDTO(groupIds, getUserId());
-        return groupServiceClient.canEdit(dto);
+        return groupServiceClient.canAdmin(dto);
     }
+
 
     private String getUserId() {
         String jwt = SecurityUtils.getCurrentJwt()
